--- a/app/src/main/res/layout/fragment_care_info.xml
+++ b/app/src/main/res/layout/fragment_care_info.xml
@@ -269,35 +269,46 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical">
+                            android:orientation="horizontal">
 
                             <TextView
                                 android:layout_width="110dp"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
                                 android:padding="16dp"
-                                android:text="특이사항" />
+                                android:text="글 제목" />
 
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="146dp"
-                                android:orientation="vertical"
-                                android:paddingLeft="10dp"
-                                android:paddingRight="10dp"
-                                android:paddingBottom="10dp">
+                            <TextView
+                                android:id="@+id/textView10"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="TextView" />
 
-                                <EditText
-                                    android:id="@+id/output2"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="163dp"
-                                    android:layout_weight="1"
-                                    android:background="#F6F6F6"
-                                    android:gravity="center_vertical"
-                                    android:padding="16dp"
-                                    android:textSize="14sp"
-                                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-                            </LinearLayout>
+                        </LinearLayout>
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView30"
+                                android:layout_width="110dp"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:padding="16dp"
+                                android:text="글 내용" />
+
+                            <TextView
+                                android:id="@+id/output2"
+                                android:layout_width="285dp"
+                                android:layout_height="150dp"
+                                android:layout_marginTop="10dp"
+                                android:background="#F6F6F6"
+                                android:gravity="center_vertical"
+                                android:padding="16dp"
+                                android:textSize="14sp"
+                                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                         </LinearLayout>
 
                     </LinearLayout>
@@ -305,6 +316,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginTop="20dp"
                         android:orientation="horizontal">
 
                         <Button
