--- a/app/src/main/res/layout/fragment_care_item.xml
+++ b/app/src/main/res/layout/fragment_care_item.xml
@@ -68,8 +68,7 @@
                             android:layout_width="65dp"
                             android:layout_height="25dp"
                             android:layout_gravity="end"
-                            android:background="#573E8B28"
-                            android:backgroundTint="#573E8B28"
+                            android:background="@drawable/pinkbutton"
                             android:text="자세히보기"
                             android:textSize="10sp"
                             tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
