--- a/app/src/main/res/drawable/bold.xml
+++ b/app/src/main/res/drawable/bold.xml
@@ -7,17 +7,17 @@
 
 
         <shape android:shape="rectangle">
-            <corners android:bottomLeftRadius="15dp"
-                android:bottomRightRadius="15dp"
-                android:topLeftRadius="15dp"
-                android:topRightRadius="15dp"/>
+            <corners android:bottomLeftRadius="10dp"
+                android:bottomRightRadius="10dp"
+                android:topLeftRadius="10dp"
+                android:topRightRadius="10dp"/>
 
             <stroke
                 android:width="1dp"
-                android:color="#5F5F5F"
+                android:color="#8F8E8E"
                 />
             <solid
-                android:color="#00000000"
+                android:color="#ffffff"
                 />
         </shape>
 
