--- a/app/src/main/res/layout/fragment_ask.xml
+++ b/app/src/main/res/layout/fragment_ask.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,141 +32,115 @@
                     android:textAlignment="center"
                     android:textSize="16sp"
                     android:textStyle="normal" />
+
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
+            <LinearLayout
+                android:layout_width="380dp"
+                android:layout_height="622dp"
+                android:layout_gravity="center_horizontal"
+                android:orientation="vertical">
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    android:layout_gravity="center_horizontal">
 
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp">
+                    <ImageView
+                        android:id="@+id/memImageView"
+                        android:layout_width="136dp"
+                        android:layout_height="111dp"
+                        android:src="@drawable/dogicon"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <LinearLayout
-                    android:layout_width="380dp"
-                    android:layout_height="622dp"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp"
                     android:orientation="vertical">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
                         android:orientation="horizontal">
 
-                        <ImageView
-                            android:id="@+id/memImageView"
-                            android:layout_width="220dp"
-                            android:layout_height="match_parent"
+                        <TextView
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:padding="16dp"
+                            android:text="제목" />
+
+                        <EditText
+                            android:id="@+id/nameInput"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="20dp"
                             android:layout_weight="1"
-                            android:src="@drawable/dogicon" />
+                            android:background="@drawable/bold1"
+                            android:backgroundTint="#C8C8C8"
+                            android:gravity="center_vertical"
+                            android:hint="제목을 임력하세요."
+                            android:padding="10dp"
+                            android:textSize="14sp"
+                            tools:ignore="TouchTargetSizeCheck" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:padding="16dp"
+                            android:text="접수일자" />
+
+                        <TextView
+                            android:id="@+id/genderInput"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="20dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/bold1"
+                            android:backgroundTint="#C8C8C8"
+                            android:gravity="center_vertical"
+                            android:hint="날짜를 입력하세요."
+                            android:padding="10dp"
+                            tools:ignore="TouchTargetSizeCheck" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="20dp"
-                        android:orientation="vertical">
+                        android:layout_marginTop="10dp"
+                        android:orientation="vertical"
+                        android:padding="5dp">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:layout_width="100dp"
-                                android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:padding="16dp"
-                                android:text="제목" />
-
-                            <EditText
-                                android:id="@+id/nameInput"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="20dp"
-                                android:layout_weight="1"
-                                android:background="#eeeeee"
-                                android:gravity="center_vertical"
-                                android:hint="제목을 임력하세요."
-                                android:padding="10dp"
-                                android:textSize="14sp"
-                                tools:ignore="TouchTargetSizeCheck" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="3dp"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:layout_width="100dp"
-                                android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:padding="16dp"
-                                android:text="접수일자" />
-
-                            <TextView
-                                android:id="@+id/genderInput"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="20dp"
-                                android:layout_weight="1"
-                                android:background="#eeeeee"
-                                android:gravity="center_vertical"
-                                android:hint="날짜를 입력하세요."
-                                android:padding="10dp"
-                                tools:ignore="TouchTargetSizeCheck" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:layout_width="100dp"
-                                android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:padding="16dp"
-                                android:text="문의내용" />
-
-                            <TextView
-                                android:id="@+id/textView40"
-                                android:layout_width="100dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:padding="16dp"
-                                android:text="다른 사용자에게 보이는 정보입니다." />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
+                        <EditText
+                            android:id="@+id/input3"
+                            android:layout_width="367dp"
                             android:layout_height="match_parent"
-                            android:layout_marginTop="10dp"
-                            android:orientation="vertical"
-                            android:padding="5dp">
+                            android:layout_marginRight="20dp"
+                            android:background="@drawable/bold1"
+                            android:backgroundTint="#C8C8C8"
+                            android:gravity="top|center_vertical"
+                            android:hint="다른 이용자들이 볼 수 있는 리뷰입니다. 자세한 후기는 다른 이용자들의 선택에 많은 도움이 되며, 오해의 소지가 있는 내용을 작성 시 검토 후 비공개 조치될 수 있습니다.                                                                                                                                                    "
+                            android:padding="10dp"
+                            android:textSize="14sp"
+                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
-                            <EditText
-                                android:id="@+id/input3"
-                                android:layout_width="367dp"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="20dp"
-                                android:layout_weight="1"
-                                android:background="#eeeeee"
-                                android:gravity="center_vertical"
-                                android:padding="10dp"
-                                android:textSize="14sp"
-                                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-                        </LinearLayout>
                     </LinearLayout>
-
                 </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -177,8 +152,7 @@
                     android:id="@+id/addButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#573E8B28"
-                    android:backgroundTint="#573E8B28"
+                    android:background="@drawable/pinkbutton"
                     android:text="문의하기" />
             </LinearLayout>
         </LinearLayout>
