--- a/app/src/main/res/layout/fragment_assess.xml
+++ b/app/src/main/res/layout/fragment_assess.xml
@@ -7,6 +7,23 @@
     android:background="#FFFFFF"
     tools:context=".AssessFragment">
 
+    <RatingBar
+        android:id="@+id/rtb2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="5"
+        android:progressTint="#FFC107"
+        android:secondaryProgressTint="#FFEB3B"
+        android:stepSize="0.5" />
+
+    <TextView
+        android:id="@+id/tvRating2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="0"
+        android:textSize="20sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,74 +71,70 @@
                 android:text="이용해주셔서 감사합니다."
                 android:textSize="13sp" />
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <RatingBar
+                        android:id="@+id/RatingBar2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:progressTint="#FFC107"
+                        android:secondaryProgressTint="#FFEB3B"
+                        android:stepSize="0.5" />
+
+                    <TextView
+                        android:id="@+id/tvRating"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="0"
+                        android:textSize="20sp" />
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/textView24"
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/reviewTitle"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginTop="30dp"
-                    android:text="별점"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/bold1"
+                    android:backgroundTint="#CFCBCB"
+                    android:hint="제목을 입력해주세요."
+                    android:padding="5dp"
                     android:textSize="16sp" />
 
-                <RatingBar
-                    android:id="@+id/ratingBar2"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView28"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <EditText
+                    android:id="@+id/reviewContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="186dp"
                     android:layout_marginLeft="30dp"
-                    android:text="맡기미에게 한 마디"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/bold1"
+                    android:backgroundTint="#CFCBCB"
+                    android:gravity="top"
+                    android:hint="다른 이용자들이 볼 수 있는 리뷰입니다. 자세한 후기는 다른 이용자들의 선택에 많은 도움이 되며, 오해의 소지가 있는 내용을 작성 시 검토 후 비공개 조치될 수 있습니다.                                                                                                                                                    "
+                    android:padding="5dp"
                     android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/textView29"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
-                    android:text="다른 이용자들이 볼 수 있는 리뷰입니다."
-                    android:textSize="11sp" />
             </LinearLayout>
-
-            <EditText
-                android:id="@+id/reviewTitle"
-                android:layout_width="315dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp"
-                android:hint="리뷰제목" />
-
-            <EditText
-                android:id="@+id/reviewContent"
-                android:layout_width="315dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="10dp"
-                android:hint="리뷰내용" />
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="작성하기" />
 
         </LinearLayout>
 
@@ -133,5 +146,16 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#faf7f4"
         android:src="@drawable/arrow" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/pinkbutton"
+        android:text="작성하기" />
 
 </FrameLayout>
