--- a/app/src/main/res/layout/fragment_care_info_update.xml
+++ b/app/src/main/res/layout/fragment_care_info_update.xml
@@ -84,7 +84,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
-                        android:background="@drawable/bold"
+                        android:background="@drawable/bold1"
                         android:hint="아이디"
                         android:padding="10dp"
                         android:textSize="14sp"
@@ -106,7 +106,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
-                        android:background="@drawable/bold"
+                        android:background="@drawable/bold1"
                         android:hint="이름"
                         android:padding="10dp"
                         android:textSize="14sp"
@@ -125,7 +125,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
-                        android:background="@drawable/bold"
+                        android:background="@drawable/bold1"
                         android:hint="주소"
                         android:padding="10dp"
                         android:textSize="14sp"
@@ -147,7 +147,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginTop="20dp"
                         android:layout_weight="1"
-                        android:background="@drawable/bold"
+                        android:background="@drawable/bold1"
                         android:hint="비밀번호"
                         android:padding="10dp"
                         android:textSize="14sp"
@@ -167,7 +167,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginBottom="20dp"
                         android:layout_weight="1"
-                        android:background="@drawable/bold"
+                        android:background="@drawable/bold1"
                         android:hint="비밀번호확인"
                         android:padding="10dp"
                         android:textSize="14sp"
