--- a/app/src/main/res/layout/fragment_complete.xml
+++ b/app/src/main/res/layout/fragment_complete.xml
@@ -132,11 +132,11 @@
 
                 <Button
                     android:id="@+id/reviewButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="140dp"
+                    android:layout_width="130dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
                     android:layout_marginTop="20dp"
-                    android:backgroundTint="#573E8B28"
+                    android:background="@drawable/pinkbutton"
                     android:text="리뷰작성" />
 
                 <TextView
@@ -157,11 +157,11 @@
 
                 <Button
                     android:id="@+id/completeButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="140dp"
+                    android:layout_width="130dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
                     android:layout_marginTop="20dp"
-                    android:backgroundTint="#573E8B28"
+                    android:background="@drawable/pinkbutton"
                     android:text="맡김완료" />
             </LinearLayout>
 
