--- a/app/src/main/res/layout/fragment_join2.xml
+++ b/app/src/main/res/layout/fragment_join2.xml
@@ -6,6 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".Join2Fragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:padding="10dp">
+
+        <Button
+            android:id="@+id/nextButton7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/pinkbutton"
+            android:text="회원가입" />
+
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -46,7 +62,7 @@
                 android:layout_width="410dp"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
-                android:background="#F6F6F6"
+                android:background="#FFFFFF"
                 android:orientation="vertical"
                 android:padding="10dp">
 
@@ -97,10 +113,9 @@
                     <Button
                         android:id="@+id/idCheckButton"
                         android:layout_width="75dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="30dp"
                         android:layout_marginLeft="5dp"
-                        android:background="#CABAAA"
-                        android:backgroundTint="#CABAAA"
+                        android:background="@drawable/pinkbutton"
                         android:gravity="center_horizontal|center_vertical"
                         android:text="중복확인"
                         android:textSize="12sp" />
@@ -197,28 +212,14 @@
                         <Button
                             android:id="@+id/locationButton"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="30dp"
                             android:layout_marginLeft="90dp"
                             android:layout_marginTop="20dp"
-                            android:background="#CABAAA"
-                            android:backgroundTint="#CABAAA"
+                            android:background="@drawable/pinkbutton"
                             android:text="위치가져오기"
                             android:textSize="12sp" />
                     </LinearLayout>
 
-                    <Button
-                        android:id="@+id/nextButton7"
-                        android:layout_width="300dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="20dp"
-                        android:background="#573E8B28"
-                        android:backgroundTint="#573E8B28"
-                        android:text="회원가입하기"
-                        android:textColor="#FFFFFF"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        tools:ignore="TextContrastCheck,TextContrastCheck" />
                 </LinearLayout>
 
             </LinearLayout>
