--- a/app/src/main/res/layout/fragment_sue.xml
+++ b/app/src/main/res/layout/fragment_sue.xml
@@ -6,52 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".SueFragment">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/button9"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="46dp"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:background="#faf7f4"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="신고하기"
+            android:textSize="16sp"
+            android:textStyle="normal" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:id="@+id/imageButton4"
-                    android:layout_width="40dp"
-                    android:layout_height="35dp"
-                    android:layout_gravity="bottom"
-                    android:layout_marginLeft="5dp"
-                    android:backgroundTint="#FFFFFF"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/arrow"
-                    android:stateListAnimator="@null"
-                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="match_parent"
-                    android:layout_height="46dp"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginRight="40dp"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="신고하기"
-                    android:textSize="20sp"
-                    android:textStyle="normal" />
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-
-
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="380dp"
@@ -99,7 +77,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="20dp"
                                 android:layout_weight="1"
-                                android:background="@drawable/bold"
+                                android:background="@drawable/bold1"
+                                android:backgroundTint="#D5D5D5"
                                 android:gravity="center_vertical"
                                 android:hint="반려동물 이름을 입력하세요."
                                 android:padding="10dp"
@@ -126,7 +105,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="20dp"
                                 android:layout_weight="1"
-                                android:background="@drawable/bold"
+                                android:background="@drawable/bold1"
+                                android:backgroundTint="#D5D5D5"
                                 android:gravity="center_vertical"
                                 android:hint="성별을 입력하세요."
                                 android:padding="10dp"
@@ -169,7 +149,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="20dp"
                                 android:layout_weight="1"
-                                android:background="@drawable/bold"
+                                android:background="@drawable/bold1"
+                                android:backgroundTint="#D5D5D5"
                                 android:gravity="center_vertical"
                                 android:padding="10dp"
                                 android:textSize="14sp"
@@ -180,22 +161,34 @@
 
                 </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="10dp">
-
-                <Button
-                    android:id="@+id/addButton"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#573E8B28"
-                    android:backgroundTint="#573E8B28"
-                    android:text="신고하기" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal" >
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <Button
+                        android:id="@+id/addButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/pinkbutton"
+                        android:text="신고하기" />
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+        </ScrollView>
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/backButton8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#faf7f4"
+        android:src="@drawable/arrow" />
 </FrameLayout>
