--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -147,86 +147,50 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp">
+
+                        <EditText
+                            android:id="@+id/editTextTextPersonName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/bold1"
+                            android:backgroundTint="#CFCBCB"
+                            android:hint="제목을 입력해주세요."
+                            android:padding="5dp"
+                            android:textSize="16sp" />
+
+                        <EditText
+                            android:id="@+id/content"
+                            android:layout_width="match_parent"
+                            android:layout_height="186dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:background="@drawable/bold1"
+                            android:backgroundTint="#CFCBCB"
+                            android:gravity="top"
+                            android:hint="오해의 소지가 있는 내용을 작성 시 검토 후 비공개 조치될 수 있습니다.                                                                                                                                                   "
+                            android:padding="5dp"
+                            android:textSize="16sp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:padding="10dp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:paddingLeft="25dp"
-                        android:paddingRight="25dp">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="match_parent"
-                            android:layout_height="250dp"
-                            android:layout_margin="10dp"
-
-                            app:cardBackgroundColor="#FAFAFA"
-                            app:cardCornerRadius="8dp"
-                            app:contentPadding="10dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal"
-                                    android:padding="10dp">
-
-                                    <ImageView
-                                        android:id="@+id/imageView5"
-                                        android:layout_width="43dp"
-                                        android:layout_height="44dp"
-                                        android:src="@drawable/person1" />
-
-                                    <TextView
-                                        android:id="@+id/careMan"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_gravity="center"
-                                        android:layout_marginLeft="10dp"
-                                        android:layout_weight="1"
-                                        android:text="yyyhhhmmm"
-                                        android:textColor="#C18686"
-                                        android:textSize="20sp" />
-
-                                    <TextView
-                                        android:id="@+id/careMan2"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_gravity="center"
-                                        android:layout_marginLeft="10dp"
-                                        android:layout_weight="1"
-                                        android:text="에게 맡김"
-                                        android:textColor="#C18686"
-                                        android:textSize="20sp" />
-
-                                </LinearLayout>
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:orientation="vertical"
-                                    android:padding="10dp">
-
-                                    <EditText
-                                        android:id="@+id/editTextTextPersonName"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="50dp"
-                                        android:ems="10"
-                                        android:hint="제목"
-                                        android:inputType="textPersonName" />
-
-                                    <EditText
-                                        android:id="@+id/content"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:ems="10"
-                                        android:inputType="textPersonName"
-                                        android:text="Name" />
-
-                                </LinearLayout>
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
+                        android:paddingRight="25dp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -242,12 +206,6 @@
                             android:paddingLeft="10dp"
                             android:text="할 일"
                             android:textSize="16sp" />
-
-                        <Button
-                            android:id="@+id/button2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Button" />
 
                         <CheckBox
                             android:id="@+id/checkBox101"
